syntax = "proto3";
package sptfyapi;

service InfoService {
  rpc Info(InfoRequest) returns
(InfoResponse);
}

message InfoRequest {
  string suri = 1;
}

message InfoResponse {
  string display_name = 1;
  string email = 2;
  string current_song = 3;
  string server_version = 4;
}

service AuthService {
  rpc Auth(AuthRequest) returns
(AuthResponse);
}

message AuthRequest {
  string email = 1;
  bytes password = 2;
}

message AuthResponse {
  string access_token = 1;
}

service PlaybackNextService {
  rpc PlaybackNext(PlaybackNextRequest) returns
(PlaybackNextResponse);
}

message PlaybackNextRequest {
  string next = 1;
}

message PlaybackNextResponse {
  string track_uri = 1;
}

service PlaybackPlayService {
  rpc PlaybackPlay(PlaybackPlayRequest) returns
(PlaybackPlayResponse);
}

message PlaybackPlayRequest {
  bool play = 1;
  string track_uri = 2;
}

message PlaybackPlayResponse {
  string playback_url = 1;
}

service PlaybackPauseService {
  rpc PlaybackPause(PlaybackPauseRequest) returns
(PlaybackPauseResponse);
}

message PlaybackPauseRequest {
  bool pause = 1;
}

message PlaybackPauseResponse {
  string playback_url = 1;
}

service TrackSearchService {
  rpc SearchTrack(TrackSearchRequest) returns
(TrackSearchResponse);
}

message TrackSearchRequest {
  string query = 1;
  uint32 pagesize = 2;
  uint32 pagenum = 3;
}

message TrackSearchResponse {
  repeated TrackResult results = 1;
}

message TrackResult {
  string suri = 1;
  string name = 2;
  string artist = 3;
  string album = 4;
  string spftytag = 5;
  bytes metadata = 6;
}

service AlbumSearchService {
  rpc SearchAlbum(AlbumSearchRequest) returns
(AlbumSearchResponse);
}

message AlbumSearchRequest {
  string query = 1;
  uint32 pagesize = 2;
  uint32 pagenum = 3;
}

message AlbumSearchResponse {
  repeated ArtistResult results = 1;
}

message AlbumResult {
  string suri = 1;
  string name = 2;
  string artist = 3;
  string sptfytag = 4;
  bytes metadata = 5;
}

service ArtistSearchService {
  rpc SearchArtist(ArtistSearchRequest) returns
(AlbumSearchResponse);
}

message ArtistSearchRequest {
  string query = 1;
  uint32 pagesize = 2;
  uint32 pagenum = 3;
}

message ArtistSearchResponse {
  repeated ArtistResult results = 1;
}

message ArtistResult {
  string suri = 1;
  string name = 2;
  string sptfytag = 3;
  bytes metadata = 4;
}